Fixed margin overflow of rows

--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -1,3 +1,7 @@
+.main-view{
+  margin: auto !important
+}
+
 .content {
   padding-top: 40px;
   padding-bottom: 40px;
